# CIP_plus_routing

./: .env  .env.example  .gitignore  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml
config/: development.json  production.json  test.json
data/: HIN_UPDATE_2023.geojson  cip.geojson  hin.geojson
docs/: PROJECT_STRUCTURE.md
src/: app.js  database.js  index.js
src/gis_route_app/: __init__.py  analysis.py  api.py  cli.py  config.py  datasets.py  main.py  models.py  routing.py  service.py  streamlit_app.py
src/modules/: project-manager.js  route-manager.js
src/routes/: projects.js
tests/: test_analysis_engine.py  test_config.py  test_datasets.py  test_service.py  test_streamlit_app.py
tests/integration/: api.test.js
tests/unit/: project-manager.test.js
